syntax="proto3";

package search;

message UserSearch {
  string Username = 1;
  int32 Last = 2;
}

message User {
  int64 Id = 1;
  string Username = 2;
  string Avatar = 3;
}

message Users {
  repeated User Users = 1;
  int32 Error = 2;
}

message PinSearch {
  string title=1;
  int32 last=2;
}

message Pin {
  int64 Id = 1;
  string Title = 2;
  string Content = 3;
  string ImgLink = 4;
  int32 UserId = 5;
}

message Pins {
  repeated Pin Pins = 1;
  int32 Error = 2;
}

message BoardSearch {
  string title=1;
  int32 last=2;
}

message Board {
  int64 Id = 1;
  string Title = 2;
  string Content = 3;
  string Username = 4;
}

message Boards {
  repeated Board Boards = 1;
  int32 Error = 2;
}

service SearchService {
  rpc GetUsersByName(UserSearch) returns (Users) {}
  rpc GetPinsByTitle(PinSearch) returns (Pins) {}
  rpc GetBoardsByTitle(BoardSearch) returns (Boards) {}
}
